[package]
name = "gurgle"
version = "0.2.0"
authors = ["7sDream <i@7sdre.am>"]
edition = "2018"
description = "Yet another dice rolling crate"
documentation = "https://docs.rs/gurgle"
readme = "README.md"
homepage = "https://github.com/7sDream/gurgle"
repository = "https://github.com/7sDream/gurgle"
license = "BSD-3-Clause-Clear"
keywords = ["dice", "roll", "trpg", "random"]
categories = ["game-development", "games", "parser-implementations", "simulation"]

[dependencies]
pest = "2"
pest_derive = "2"
thiserror = "1"
once_cell = "1"

[dependencies.nanorand]
version = "0.6"
default_features = false
features = ["std", "tls", "wyrand"]

[features]
default = ["detail"]
detail = []
